# da-adapter-template

./: Cargo.toml  README.md
src/: lib.rs  service.rs  verifier.rs
